The extra quote was causing problem on IE browsers. Removing it. Issue number: Obtained from: Submitted by: Reviewed by:
svn path=/trunk/; revision=878


Former-commit-id: b4d11c3d5591786eda06b4e9e02b9ba4444967d8

--- a/themes/src/suntheme/css/layout.css
+++ b/themes/src/suntheme/css/layout.css
@@ -162,7 +162,7 @@ body {
 	padding:3px; 
 }
 
-.dndOuterSpan@THEME_CSS@"  {
+.dndOuterSpan@THEME_CSS@ {
     position: relative;
 }
 
